<resources>
    <string name="app_name">SmartbandApp</string>

    <string name="login_label">Login:</string>
    <string name="password_label">Password:</string>
    <string name="user_login_button">Let me in!</string>
    <string name="djddev">DJD DEVELOPMENT</string>
    <string name="djddev_authors">D. Perdek, J. Chodorowski, D. Śliwa</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="register"><u>Doesn't have account?</u></string>

    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
