<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dawidperdek.djddev.smartbandapp.LoginActivity"
    android:background="#afafaf">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_label"
        android:id="@+id/textViewUserLoginLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="14"
        android:id="@+id/editTextUserLogin"
        android:layout_below="@+id/textViewUserLoginLabel"
        android:layout_alignStart="@+id/textViewUserLoginLabel"
        android:editable="true"
        android:enabled="true"
        android:textColor="#64ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_label"
        android:id="@+id/textViewUserPasswordLabel"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_below="@+id/editTextUserLogin"
        android:layout_alignStart="@+id/editTextUserLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="14"
        android:id="@+id/editTextUserPassword"
        android:layout_below="@+id/textViewUserPasswordLabel"
        android:layout_alignStart="@+id/textViewUserPasswordLabel"
        android:textColor="#64ffffff"
        android:password="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login_button"
        android:id="@+id/buttonUserLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="#6480dde1"
        android:textSize="24sp"
        android:textColor="#1c3435"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:onClick="loginAttempt" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/djddev"
        android:id="@+id/textViewLoginFooterDJD"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_above="@+id/textViewLoginFooterAuthors"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/djddev_authors"
        android:id="@+id/textViewLoginFooterAuthors"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password"
        android:id="@+id/textViewLoginForgotPassword"
        android:layout_below="@+id/editTextUserPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:id="@+id/textViewLoginRegister"
        android:layout_below="@+id/textViewLoginForgotPassword"
        android:layout_alignStart="@+id/textViewLoginForgotPassword"
        android:layout_marginTop="30dp"
        android:clickable="true" />
</RelativeLayout>
